<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/pdfPageImageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scaleType="fitCenter"
        android:contentDescription="@string/desc_pdf_page" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button android:id="@+id/prevPageButton" android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:text="@string/action_prev_page" />
        <Button android:id="@+id/nextPageButton" android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:text="@string/action_next_page" />
    </LinearLayout>
</LinearLayout>